# moveit2_scripts

./: CMakeLists.txt  READ.me  package.xml
launch/: double_motion_trajectory.launch.py  goal_pose_trajectory.launch.py  joint_space_trajectory.launch.py  motion1.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py  pick_and_place_real.launch.py  pick_and_place_test.launch.py
src/: double_motion_trajectory.cpp  draw_x_cartesian_trajectory.cpp  goal_pose_trajectory.cpp  motion1.cpp  pick_and_place.cpp  pick_and_place_4cup_cycle.cpp  pick_and_place_hard_coded_location.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp  pick_and_place_real.cpp  pick_and_place_spawn_location_based.cpp  pick_and_place_test.cpp  pick_and_place_trajectory.cpp  pick_and_place_turn_method.cpp
